--- a/05-Token-Renewal/package.json
+++ b/05-Token-Renewal/package.json
@@ -1,10 +1,7 @@
 {
   "name": "token-renewal",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "1.0.10"
-  },
   "dependencies": {
     "auth0-js": "^9.0.0",
     "bootstrap": "^3.3.7",
@@ -12,13 +9,22 @@
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
-    "start": "npm run client:start",
-    "client:start": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
