--- a/02-Calling-an-API/Dockerfile
+++ b/02-Calling-an-API/Dockerfile
@@ -34,7 +34,7 @@ COPY --from=build /app/src/auth_config.json ./src/auth_config.json
 COPY --from=build /app/server.js .
 
 EXPOSE 3000
-
+ENV SERVER_PORT=3000
 ENV NODE_ENV production
 
 CMD ["node", "server.js"]
