--- a/02-Calling-an-API/package.json
+++ b/02-Calling-an-API/package.json
@@ -3,27 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel spa server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon server.js",
-    "dev": "npm-run-all --parallel start server"
+    "spa": "react-scripts start",
+    "server": "node server.js",
+    "server:dev": "nodemon server.js",
+    "dev": "npm-run-all --parallel spa server:dev"
   },
   "dependencies": {
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "helmet": "^3.18.0",
     "jwks-rsa": "^1.4.0",
-    "morgan": "^1.9.1"
-  },
-  "devDependencies": {
+    "morgan": "^1.9.1",
     "@auth0/auth0-spa-js": "^1.0.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "highlight.js": "^9.15.6",
-    "nodemon": "^1.19.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -31,6 +30,9 @@
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.0",
     "samples-bootstrap-theme": "github:auth0-quickstarts/samples-bootstrap-theme"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.0"
   },
   "eslintConfig": {
     "extends": "react-app"
