--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -1,13 +1,20 @@
 # Configuration for probot-stale - https://github.com/probot/stale
 
 # Number of days of inactivity before an Issue or Pull Request becomes stale
-daysUntilStale: 90
+daysUntilStale: 30
 
 # Number of days of inactivity before an Issue or Pull Request with the stale label is closed.
 daysUntilClose: 7
 
-# Issues or Pull Requests with these labels will never be considered stale. Set to `[]` to disable
-exemptLabels: []
+# Only issues or pull requests with all of these labels are considered by StaleBot. Defaults to `[]` (disabled)
+onlyLabels:
+  - 'more info needed'
+
+# Ignore issues in projects
+exemptProjects: true
+
+# Ignore issues and PRs in milestones
+exemptMilestones: true
 
 # Set to true to ignore issues with an assignee (defaults to false)
 exemptAssignees: true
