--- a/Sample-01/package.json
+++ b/Sample-01/package.json
@@ -16,10 +16,14 @@
     "prod": "npm-run-all --parallel server api-server"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.2.0",
+    "@auth0/auth0-react": "^1.9.0",
+    "@babel/core": "^7.17.8",
+    "@babel/plugin-syntax-flow": "^7.16.7",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "autoprefixer": "^10.4.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-jwt": "^6.0.0",
@@ -28,11 +32,13 @@
     "jwks-rsa": "^1.12.2",
     "morgan": "^1.9.1",
     "npm-run-all": "^4.1.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
-    "reactstrap": "^8.0.0"
+    "postcss": "^8.4.12",
+    "react": "^17.0",
+    "react-dom": "^17.0",
+    "react-router-dom": "^5.0",
+    "react-scripts": "^5.0",
+    "reactstrap": "^8.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.10.1",
