--- a/Sample-01/Dockerfile
+++ b/Sample-01/Dockerfile
@@ -10,7 +10,8 @@ WORKDIR /app
 COPY package.json .
 
 RUN npm install -g npm@latest
-RUN npm install -g typescript@latest yarn@latest
+RUN npm install -g typescript@latest
+RUN npm install -g --force yarn@latest
 
 RUN yarn install
 
