--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,13 +39,10 @@ jobs:
             echo "{ \"domain\": \"$AUTH0_TEST_DOMAIN\", \"clientId\": \"$AUTH0_TEST_CLIENT_ID\", \"audience\": \"$AUTH0_TEST_API_IDENTIFIER\" }" > $AUTH0_CFG
       - setup_remote_docker:
           version: 19.03.13
-      - docker/build:
-          image: $CIRCLE_JOB
-          docker-context: ./$SAMPLE_PATH
-          path: ./$SAMPLE_PATH
       - run:
           name: Build pull request
           command: |
+            docker build -t $CIRCLE_JOB ./$SAMPLE_PATH
             docker run -d -p 3000:3000 --name $CIRCLE_SHA1 $CIRCLE_JOB
       - run:
           name: Wait for app to be available
